# FDF

./: ._maps  CMakeLists.txt  FdF  Makefile  a.out  check.c  check_z.c  create_3dmap.c  create_image.c  fdf  fdf.h  get_color.c  get_next_line.h  hook.c  main.c  revers_coordinate.c  test.fdf  write_line.c
fdf/: ._fdf  ._maps
libft/: ._ft_strstr.c  Makefile  ft_atoi_base.c  libft.h
maps/: ._10-2.fdf  ._10-70.fdf  ._100-6.fdf  ._20-60.fdf  ._42.fdf  ._50-4.fdf  ._basictest.fdf  ._elem-col.fdf  ._elem-fract.fdf  ._elem.fdf  ._elem2.fdf  ._julia.fdf  ._mars.fdf  ._pentenegpos.fdf  ._plat.fdf  ._pnp_flat.fdf  ._pylone.fdf  ._pyra.fdf  ._pyramide.fdf  ._t1.fdf  ._t2.fdf
minilibx/: ._=README=  ._Makefile  ._Makefile.gen  ._Makefile.mk  ._configure  ._man  ._mlx.h  ._mlx_clear_window.c  ._mlx_destroy_image.c  ._mlx_destroy_window.c  ._mlx_expose_hook.c  ._mlx_flush_event.c  ._mlx_get_color_value.c  ._mlx_get_data_addr.c  ._mlx_hook.c  ._mlx_init.c  ._mlx_int.h  ._mlx_int_anti_resize_win.c  ._mlx_int_do_nothing.c  ._mlx_int_get_visual.c  ._mlx_int_param_event.c  ._mlx_int_set_win_event_mask.c  ._mlx_int_str_to_wordtab.c  ._mlx_int_wait_first_expose.c  ._mlx_key_hook.c  ._mlx_lib_xpm.c  ._mlx_loop.c  ._mlx_loop_hook.c  ._mlx_mouse_hook.c  ._mlx_new_image.c  ._mlx_new_window.c  ._mlx_pixel_put.c  ._mlx_put_image_to_window.c  ._mlx_rgb.c  ._mlx_string_put.c  ._mlx_xpm.c  ._mlx_xpm.c.ok  ._rgb2c.pl  ._test
minilibx_macos 2/: ._Makefile  .__README_  ._font.c  ._font.xcf  ._man  ._mlx.h  ._mlx_init_loop.m  ._mlx_int.h  ._mlx_int_str_to_wordtab.c  ._mlx_new_image.m  ._mlx_rgb.c  (+4 more)
(+88 files in other folders)
